# personal-website

./: .gitignore  404.html  CNAME  README.md  SUMMARY.md  about.md  dev.sh  index.html  mkdocs.yml  publications.md  pyproject.toml  requirements.txt  resources.md  sitemap.xml  talks.md
.github/workflows/: deploy.yml  update-publications.yml
about/: index.html
docs/: about.md  index.md  publications.md  resources.md  talks.md
docs/blog/: .authors.yml  index.md
docs/data/: scholar-dashboard.json
docs/javascripts/: charts.js  extra.js  filters.js  scholar-dashboard.js
docs/stylesheets/: extra.css
overrides/: main.html
publications/: index.html
resources/: index.html
scripts/: update_publications.py
search/: search_index.json
talks/: index.html
